--- a/main.html
+++ b/main.html
@@ -3,10 +3,13 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+ <title>Favourite Song</title>
 </head>
-
 <body>
+    <div>
+        <p>My current favourite song is <a href="https://www.youtube.com/watch?v=3JZ_D3ELwOQ" target="_blank">Shape of You</a></p>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
